@@ -1,0 +1,34 @@
+[buildout]
+parts =
+    zopepy
+    test
+    coverage-report
+    coverage-test
+
+develop = .
+eggs = plone.reload
+
+[zopepy]
+recipe = zc.recipe.egg
+eggs = ${buildout:eggs}
+interpreter = zopepy
+extra-paths = 
+scripts = zopepy
+
+[test]
+recipe = zc.recipe.testrunner
+eggs = ${buildout:eggs}
+
+defaults = ['--exit-with-status', '--auto-color', '--auto-progress']
+
+[coverage-test]
+recipe = zc.recipe.testrunner
+eggs = ${test:eggs}
+defaults = ['--coverage', '../../coverage', '-v', '--auto-progress']
+
+[coverage-report]
+recipe = zc.recipe.egg
+eggs = z3c.coverage
+scripts = coverage=coverage-report
+arguments = ('coverage', 'report')
+
