@@ -1,10 +1,10 @@
 from zope.interface import implements
 
 from Acquisition import aq_base
-from Globals import DevelopmentMode
 from Products.Five.browser import BrowserView
 
 from plone.reload.code import reload_code
+from plone.reload.config import ENABLED
 from plone.reload.interfaces import IReload
 from plone.reload.zcml import reload_zcml
 
@@ -29,7 +29,7 @@ class Reload(BrowserView):
         return self.index()
 
     def available(self):
-        if DevelopmentMode:
+        if ENABLED:
             return True
         return False
 
