@@ -1,0 +1,4 @@
+from Globals import DevelopmentMode
+
+ENABLED = bool(DevelopmentMode)
+EXCLUDE_SITE_PACKAGES = True
