@@ -4,6 +4,10 @@ Changelog
 1.0 (unreleased)
 ----------------
 
+- Specified package dependencies, added development buildout and added
+  extensive test coverage.
+  [hannosch]
+
 - Figured out a way to support reloading code that uses decorators.
   [hannosch]
 
